--- a/EOY-Infographic/css/style.css
+++ b/EOY-Infographic/css/style.css
@@ -2,8 +2,6 @@ body {
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
     min-width: 970px;
-    padding-top: 70px;
-    padding-bottom: 30px;
 }
 .frame {
     pointer-events: none;
@@ -15,9 +13,9 @@ body {
     z-index: 9999;
 }
 p {
-    width: 75%;
+    width: 90%;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     line-height: 2rem;
     letter-spacing: 0.02rem;
 }
@@ -51,7 +49,9 @@ h2 {
     color: #21AEAB;
     text-align: center;
 }
-
+.light-blue {
+    color: #2180AE;
+}
 .survey {
     font-size: 7rem;
 }
@@ -75,10 +75,65 @@ font-size: 5rem;
     color: #21AEAB;
     margin-left: 200px;
 }
-.engagement {
+
+.survey-footnote {
+    font-size: 1rem;
+    color: #045775;
+    margin-right: -53px;
+    margin-top: 159px;
+}
+.medicine-footnote {
+    font-size: 1rem;
+    color: #045775;
+    margin-right: -53px;
+    margin-top: 35px;
+}
+.engagement img {
+    width: 60%;
+}
+.engagement h1 {
     position: absolute;
     top: 58px;
 }
+.caregiver {
+    font-size: 9rem;
+    color: #2180AE;
+}
+.hands {
+    font-size: 4rem;
+}
+
+/* .group-hands {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.hand-1 {
+    position: absolute;
+    width: 50%;
+}
+.hand-2 {
+    position: absolute;
+    width: 50%;
+}
+.hand-3 {
+    position: absolute;
+    width: 50%;
+}
+.hand-4 {
+    position: absolute;
+    width: 50%;
+}
+.hand-5 {
+    position: absolute;
+    width: 50%;
+}
+.hand-6 {
+    position: absolute;
+    width: 50%;
+} */
 
 h3 {
     font-family: 'Walter Turncoat', cursive;
@@ -136,8 +191,11 @@ section {
     padding: 10px 50px 10px 50px;
 }
 
-.mt-neg {
+.mt-neg-2 {
     margin-top: -480px;
+}
+.mt-neg-1 {
+    margin-top: -150px;
 }
 .full-width {
     padding: 50px 0px 50px 0px;
@@ -145,7 +203,55 @@ section {
 .abs {
     position: absolute;
 }
+.plane-1 {
+    position: absolute;
+    top: -8px;
+    right: 216px;
+    width: 9%;
+}
+.plane-2 {
+    position: absolute;
+    width: 12%;
+    bottom: 0px;
+    right: 200px;
+}
+.plane-3 {
+    position: absolute;
+    width: 8%;
+    top: 10px;
+    left: 200px;
+    z-index: 99;
+}
+.plane-4 {
+    left: 198px;
+    position: absolute;
+    width: 12%;
+    bottom: -24px;
+}
+.fb {
+color: #2180AE;
+font-size: 6rem;
+}
+.insta {
+color: #A663B9;
+font-size: 6rem;
+}
+.twitter {
+color: #21AEAB;
+font-size: 6rem;
+}
 
+.speech-bubble {
+
+}
+
+.time {
+    position: absolute;
+    top: 48px;
+    font-size: 6rem;
+    color: #A663B9;
+    text-align: center;
+}
 .speech-blue {
     margin-right: -300px;
     position: relative;
@@ -163,6 +269,46 @@ section {
 
 .question-bg {
     position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.qm-1 {
+    position: absolute;
+    left: 151px;
+    width: 7%;
+}
+.qm-2 {
+    position: absolute;
+    left: 205px;
+    bottom: 9px;
+    width: 5%;
+}
+.qm-3 {
+    position: absolute;
+    right: 554px;
+    top: 139px;
+    width: 5%;
+}
+.qm-4 {
+    position: absolute;
+    right: 477px;
+    bottom: 186px;
+    width: 4%;
+}
+.qm-5 {
+    position: absolute;
+    right: 361px;
+    bottom: -50px;
+    width: 4%;
+}
+.qm-6 {
+    position: absolute;
+    right: 114px;
+    top: 5px;
+    width: 11%;
 }
 
 .question-h2 {
@@ -218,4 +364,28 @@ section {
     top: 100px;
     width: 50%;
     margin-left: -27px;
+}
+.chart {
+    position: absolute;
+    color: #002E3B;
+}
+.doctors {
+    position: absolute;
+    color: #002E3B;
+    bottom: 48px;
+    font-size: 6rem;
+}
+
+@media only screen and (max-width: 600px) { 
+
+    .engagement img {
+        width: 90%;
+    }
+    .engagement h1 {
+        position: absolute;
+        top: 58px;
+    }
+
+
+
 }
